# SamplesCMAKE

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: Globals.h
myApp/: CMakeLists.txt
myApp/src/: main.cpp  myClass.cpp  myClass.h  myClassUser.h
